package com.example.recipeShoppingList.application.shoppingList

class ShoppingListController {
    //    def loadShoppingList(listName: String, listItems)
}
